--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
 }
 
 .el8
@@ -56,7 +55,7 @@ a
 {
     font-family: Arial, Helvetica, sans-serif !important;
     text-decoration: none;
-    color: #2a55d4;
+    color: #2356ba;
 }
 
 ul
@@ -71,7 +70,14 @@ li
 
 .money
 {
-    margin-left: -70px;
+    margin-top: -15px;
+    margin-left: -75px;
+}
+
+.half-strong
+{
+    font-weight: 600;
+    font-size: 11px;
 }
 
 .news
@@ -113,11 +119,30 @@ li
     line-height: 2;
 }
 
-.content
+.auto-content
 {
     margin-top: 10px;
     overflow: auto;
-    height: 150px;
+    height: 170px;
+}
+
+.gradient-1
+{
+    z-index: 99;
+    background-image: linear-gradient(to top, rgba(30,87,153,0), white);
+    position: absolute;
+    height: 50px;
+    width: 238px;
+}
+
+.gradient-2
+{
+    z-index: 99;
+    background-image: linear-gradient(to bottom, rgba(30,87,153,0), white);
+    position: absolute;
+    height: 50px;
+    width: 238px;
+    margin-top: 130px;
 }
 
 .search-bar
@@ -147,6 +172,19 @@ li
     font-size: 13px;
 }
 
+.city
+{
+    font-size: 12px;
+    color: #8f8f8f;
+    margin-top: 10px;
+    margin-left: 25px;
+}
+
+.city:hover
+{
+    color: #cf0606;
+}
+
 .gray
 {
     font-size: 13px;
@@ -174,8 +212,8 @@ input
 .extra
 {
     background: white;
-    border: 18px solid transparent;
-    border-left: 18px solid gold;
+    border: 17px solid transparent;
+    border-left: 12px solid gold;
 }
 
 input:focus
@@ -186,7 +224,7 @@ input:focus
 .logo
 {
     object-fit: contain;
-    width: 140%;
+    width: 145%;
     height: 100%;
 }
 
