--- a/index.css
+++ b/index.css
@@ -252,15 +252,15 @@ input
     font-size: 14px;
 }
 
-.button-text::after
+.search::after
 {
-    position: relative;
-    left: 17px;
-    top: 1px;
+    position: absolute;
+    right: 247px;
+    top: 278px;
     content: "";
-    border-top: 11px solid transparent;
+    border-top: 19px solid transparent;
     border-left: 12px solid gold;
-    border-bottom: 10px solid transparent;
+    border-bottom: 19px solid transparent;
 }
 
 .film-section
